[CALCITE-1071] Improve hash functions